--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 90vh;
+            height: 100vh;
             background-color: #f0f0f0;
             overflow: hidden;
         }
@@ -62,7 +62,7 @@
         }
 
         .pagina img {
-            max-width: 100%;
+            max-width: 90%;
             max-height: 100%;
         }
 
@@ -75,14 +75,14 @@
             font-weight: bold;
             color: #80a886;
             background-color: rgba(255, 255, 255, 0.7);
-            padding: 5px 10px;
+            padding: 0px 10px;
             border-radius: 5px;
         }
 
         @media screen and (max-width: 768px) {
             #revista {
                 width: 95vw; /* Aumentar el tamaño de la revista en pantallas más pequeñas */
-                height: 60vh;
+                height: 75vh;
             }
 
             .pagina {
@@ -90,7 +90,7 @@
             }
 
             .numeracion {
-                font-size: 5vw; /* Ajustar el tamaño de la numeración en pantallas pequeñas */
+                font-size: 2vw; /* Ajustar el tamaño de la numeración en pantallas pequeñas */
                 bottom: 5%;
             }
         }
@@ -117,29 +117,32 @@
         <div class="pagina"><img src="Img/7.png"><div class="numeracion">7</div></div>
         <div class="pagina"><img src="Img/8.png"><div class="numeracion">8</div></div>
     </div>
-<br/><br/>
+    <br/><br/>
     <div id="controles">
         <button id="anterior"><</button>
         <button id="siguiente">></button>
     </div>
-
+     <!-- Agregar el archivo de sonido -->
+     <audio id="click-sound" src="cambio.mp3" preload="auto"></audio>
     <script>
         $(document).ready(function() {
             $('#revista').turn({
-                width: '100%',
-                height: '100%',
+                width: '90%',
+                height: '90%',
                 autoCenter: true,
-                display: 'double',
+                display: 'single',
                 acceleration: true,
                 gradients: true,
                 duration: 1000
             });
 
             $('#siguiente').click(function() {
+                $('#click-sound')[0].play(); // Reproducir sonido
                 $('#revista').turn('next');
             });
 
             $('#anterior').click(function() {
+                $('#click-sound')[0].play(); // Reproducir sonido
                 $('#revista').turn('previous');
             });
         });
