--- a/index.html
+++ b/index.html
@@ -107,15 +107,50 @@
    
     <br/><br/>
     <div id="revista">
-        <div class="pagina"><img src="Img/8.png" alt="Portada"></div>
-        <div class="pagina"><img src="Img/1.png"><div class="numeracion">1</div></div>
-        <div class="pagina"><img src="Img/2.png"><div class="numeracion">2</div></div>
-        <div class="pagina"><img src="Img/3.png"><div class="numeracion">3</div></div>
-        <div class="pagina"><img src="Img/4.png"><div class="numeracion">4</div></div>
-        <div class="pagina"><img src="Img/5.png"><div class="numeracion">5</div></div>
-        <div class="pagina"><img src="Img/6.png"><div class="numeracion">6</div></div>
-        <div class="pagina"><img src="Img/7.png"><div class="numeracion">7</div></div>
-        <div class="pagina"><img src="Img/8.png"><div class="numeracion">8</div></div>
+        <div class="pagina"><img src="Img/0.png" alt="Portada"></div>
+        <div class="pagina"><img src="Img/1.png"></div>
+        <div class="pagina"><img src="Img/2.png"></div>
+        <div class="pagina"><img src="Img/3.png"></div>
+        <div class="pagina"><img src="Img/4.png"></div>
+        <div class="pagina"><img src="Img/5.png"></div>
+        <div class="pagina"><img src="Img/6.png"></div>
+        <div class="pagina"><img src="Img/7.png"></div>
+        <div class="pagina"><img src="Img/8.png"></div>
+        <div class="pagina"><img src="Img/9.png"></div>
+        <div class="pagina"><img src="Img/10.png"></div>
+        <div class="pagina"><img src="Img/11.png"></div>
+        <div class="pagina"><img src="Img/12.png"></div>
+        <div class="pagina"><img src="Img/13.png"></div>
+        <div class="pagina"><img src="Img/14.png"></div>
+        <div class="pagina"><img src="Img/15.png"></div>
+        <div class="pagina"><img src="Img/16.png"></div>
+        <div class="pagina"><img src="Img/17.png"></div>
+        <div class="pagina"><img src="Img/18.png"></div>
+        <div class="pagina"><img src="Img/19.png"></div>
+        <div class="pagina"><img src="Img/20.png"></div>
+        <div class="pagina"><img src="Img/21.png"></div>
+        <div class="pagina"><img src="Img/22.png"></div>
+        <div class="pagina"><img src="Img/23.png"></div>
+        <div class="pagina"><img src="Img/24.png"></div>
+        <div class="pagina"><img src="Img/25.png"></div>
+        <div class="pagina"><img src="Img/26.png"></div>
+        <div class="pagina"><img src="Img/27.png"></div>
+        <div class="pagina"><img src="Img/28.png"></div>
+        <div class="pagina"><img src="Img/29.png"></div>
+        <div class="pagina"><img src="Img/30.png"></div>
+        <div class="pagina"><img src="Img/31.png"></div>
+        <div class="pagina"><img src="Img/32.png"></div>
+        <div class="pagina"><img src="Img/33.png"></div>
+        <div class="pagina"><img src="Img/34.png"></div>
+        <div class="pagina"><img src="Img/35.png"></div>
+        <div class="pagina"><img src="Img/36.png"></div>
+        <div class="pagina"><img src="Img/37.png"></div>
+        <div class="pagina"><img src="Img/38.png"></div>
+        <div class="pagina"><img src="Img/39.png"></div>
+        <div class="pagina"><img src="Img/40.png"></div>
+        <div class="pagina"><img src="Img/41.png"></div>
+        <div class="pagina"><img src="Img/42.png"></div>
+        <div class="pagina"><img src="Img/43.png"></div>
     </div>
     <br/><br/>
     <div id="controles">
